--- a/fxml/thirdPage.fxml
+++ b/fxml/thirdPage.fxml
@@ -28,12 +28,12 @@
             <Font name="Arial Black" size="26.0" />
          </font>
       </Label>
-      <Label fx:id="text_question" alignment="CENTER" layoutX="14.0" layoutY="134.0" prefHeight="100.0" prefWidth="573.0" text="0 + 0 = ?">
+      <Label fx:id="text_question" alignment="CENTER" layoutX="14.0" layoutY="134.0" prefHeight="100.0" prefWidth="445.0" text="0 + 0 = ?">
          <font>
-            <Font name="Arial Black" size="54.0" />
+            <Font name="Arial Black" size="42.0" />
          </font>
       </Label>
-      <TextField fx:id="text_answer" alignment="CENTER" layoutX="16.0" layoutY="234.0" prefHeight="100.0" prefWidth="445.0" >
+      <TextField fx:id="text_answer" alignment="CENTER" layoutX="16.0" layoutY="234.0" prefHeight="100.0" prefWidth="445.0">
          <font>
             <Font name="Arial Black" size="50.0" />
          </font>
@@ -61,6 +61,16 @@
       <Label fx:id="label_time" layoutX="468.0" layoutY="412.0" prefHeight="49.0" prefWidth="117.0">
          <font>
             <Font name="Arial Black" size="24.0" />
+         </font>
+      </Label>
+      <Label alignment="BOTTOM_LEFT" layoutX="468.0" layoutY="126.0" prefHeight="49.0" prefWidth="117.0" text="Best time:">
+         <font>
+            <Font name="Arial Black" size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="best_time" alignment="TOP_LEFT" layoutX="468.0" layoutY="176.0" prefHeight="49.0" prefWidth="117.0">
+         <font>
+            <Font name="Arial Black" size="20.0" />
          </font>
       </Label>
 
